fix alignments

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -11,13 +11,13 @@
 }
 @media screen and (min-width: 767px) {
   .row-fluid{
-    padding-left: 8%;
-    padding-right: 8%;
+    padding-left: 15%;
+    padding-right: 15%;
   }
 }
 .row-pad{
-  padding-left: 8% !important;
-  padding-right: 8% !important;
+  padding-left: 15% !important;
+  padding-right: 15% !important;
 }
 
 // ajdusts responsive order
